# BevyPostprocessSample

./: Cargo.toml  README.md
assets/glbs/: cube_001.gltf
assets/shaders/: post_process.wgsl
src/: main.rs  plugins.rs
src/consts/: app.rs
src/plugins/: post_process.rs  structs.rs
src/plugins/functions/: shader.rs
src/plugins/structs/: components.rs  post_processes.rs
