[package]
name = "bevy_post_process_sample"
version = "0.1.0"
edition = "2024"

[features]
default = []
webgl2 = []

[dependencies]
bevy = { version = "0.16", features = ["webgl2"] }
bevy_tweening = "0.13.0"
image = "0.25.6"
once_cell = "1.21.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2"
